added functions to wrap blockquote in an a tag and add classes

--- a/home.html
+++ b/home.html
@@ -20,6 +20,6 @@
   <p>Unlike many people who might find themselves unemployed in the state, neither Flood nor Hermann appear to be in danger of falling on hard times.</p>
   <p>Flood is guaranteed to receive a $1.4 million payday, while Rutgers will continue to give Hermann $450,000 per year, along with pension and health benefits, for the next two and half years, or until she gets another job.</p>
   
-    <a class="tweetThis" href="#"><blockquote class="tweetText">Unlike many people who might find themselves unemployed in the state, neither Flood nor Hermann appear to be in danger of falling on hard times."</blockquote>
-    <button class="btn btn-primary"><i class="fa fa-twitter"></i> Tweet</button></a>
+    <blockquote>Unlike many people who might find themselves unemployed in the state, neither Flood nor Hermann appear to be in danger of falling on hard times."<button class="btn btn-primary"><i class="fa fa-twitter"></i> Tweet</button></blockquote>
+    
 </html>
