--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>New Brunswick Today</title>
+  <title>News</title>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -10,7 +10,10 @@
   <script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
-  <h1>Headline</h1>
+  <h1 id="headline">De Finibus Bonorum et Malorum</h1>
+  <div id="byLine">
+    <p>By: Cicero 45 B.C.</p>
+  </div>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tristique vehicula luctus. Sed non ligula efficitur, auctor elit at, convallis elit. Nulla tincidunt in ipsum et tincidunt. Fusce mattis feugiat nisi, eget sagittis erat efficitur pretium. Proin lorem felis, tempor in justo at, auctor hendrerit diam. Morbi malesuada scelerisque tempus. Nunc sagittis mattis lacinia. Quisque sodales nunc nec mattis commodo. Sed nunc ligula, viverra sed tellus a, pulvinar mattis sem. Praesent nulla ligula, vulputate sagittis consectetur nec, molestie sed urna. In et posuere nisl, in dapibus arcu. Nunc suscipit orci turpis, sit amet aliquam ligula blandit sit amet. Duis ligula arcu, sagittis ac dictum sed, porta vitae nunc.</p>
   <p>Integer efficitur elementum eros, et blandit erat varius ut. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus pellentesque consectetur felis, eu sagittis neque vestibulum nec. Phasellus quis vehicula ante. Sed pharetra augue sit amet quam congue, eu elementum mi consectetur. Aenean at pharetra ligula. In aliquam magna vel massa bibendum, vel consequat arcu lacinia. Nunc auctor vel velit id dictum. Curabitur tristique eu enim sit amet tincidunt.</p>
   <p>Vivamus tellus felis, faucibus commodo magna eu, venenatis bibendum metus. Nullam commodo tellus ac lacinia luctus. Donec vehicula nisi feugiat accumsan placerat. Cras eget elementum felis. Curabitur vitae lacus a purus semper fermentum ut ut nibh. Phasellus quis volutpat sapien. Nullam tincidunt, magna nec aliquam laoreet, nunc sapien efficitur nunc, sed iaculis nisi leo nec orci. Morbi convallis mi sit amet neque porta imperdiet. Interdum et malesuada fames ante ipsum primis in faucibus. Mauris vitae erat eget nibh accumsan elementum non non turpis. Praesent egestas faucibus cursus. Cras et sem mauris. Aliquam orci sem, pretium nec dui quis, lobortis molestie augue. Praesent mauris ipsum, ultricies vel orci sit amet, iaculis sagittis massa. Mauris ac consequat lorem, et tincidunt quam. Mauris vitae consectetur magna.</p>
