--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 <body>
   <h1 id="headline">De Finibus Bonorum et Malorum</h1>
   <div id="byLine">
-    <p>By: Cicero 45 B.C.</p>
+    <p>By: Marcus Tullius Cicero 45 B.C.</p>
   </div>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tristique vehicula luctus. Sed non ligula efficitur, auctor elit at, convallis elit. Nulla tincidunt in ipsum et tincidunt. Fusce mattis feugiat nisi, eget sagittis erat efficitur pretium. Proin lorem felis, tempor in justo at, auctor hendrerit diam. Morbi malesuada scelerisque tempus. Nunc sagittis mattis lacinia. Quisque sodales nunc nec mattis commodo. Sed nunc ligula, viverra sed tellus a, pulvinar mattis sem. Praesent nulla ligula, vulputate sagittis consectetur nec, molestie sed urna. In et posuere nisl, in dapibus arcu. Nunc suscipit orci turpis, sit amet aliquam ligula blandit sit amet. Duis ligula arcu, sagittis ac dictum sed, porta vitae nunc.</p>
   <p>Integer efficitur elementum eros, et blandit erat varius ut. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus pellentesque consectetur felis, eu sagittis neque vestibulum nec. Phasellus quis vehicula ante. Sed pharetra augue sit amet quam congue, eu elementum mi consectetur. Aenean at pharetra ligula. In aliquam magna vel massa bibendum, vel consequat arcu lacinia. Nunc auctor vel velit id dictum. Curabitur tristique eu enim sit amet tincidunt.</p>
